# ai-learning

./: .gitignore  README  README.md
.github/workflows/: ci.yml
notes/: README.md
projects/java/000-template/: README.md  pom.xml
projects/java/000-template/src/main/java/ai/learning/template/: Main.java
projects/java/000-template/src/test/java/ai/learning/template/: SmokeTest.java
projects/python/000-template/: README.md  pyproject.toml
projects/python/000-template/src/: main.py
projects/python/001-rag-bot-hybrid/: .env.example  README.md  docker-compose.yml  eval_runs.jsonl  pyproject.toml  requirements.txt
projects/python/001-rag-bot-hybrid/src/: app.py  core_pipeline.py  ingest.py  main.py  search.py
projects/python/001-rag-bot-hybrid/tests/: test_smoke.py
